# splatwalk

./: .eslintrc.cjs  .gitignore  CHANGELOG.md  CODE_FIXES_SOG_EXPORT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  IDEATION.md  LICENSE  LICENSING.md  MILESTONES.md  MUTUALISM_MILESTONES.md  README.md  RELEASING.md  SOG_EXPORT_FIX_SUMMARY.md  TROUBLESHOOTING_SOG_EXPORT.md  UPSTREAM_ISSUES.md  index.html  netlify.toml  nginx.conf  nginx.conf.template  package-lock.json  package.json  react.html  render.yaml  storage-adapter-app.html  tsconfig.json  tsconfig.react.json  vite.config.ts  vuetify.html
.github/workflows/: release.yml
docs/: INTEGRATION.md  LICENSING-DECISION.md  PERF_FRAME_SDP_7_2.md  coordinate-alignment.md  wasm-api.md
docs/releases/: v0.3.0.md  v0.3.1.md  v0.3.2.md  v0.3.4.md  v0.3.5.md  v0.3.6.md  v0.6.0.md  v0.6.1.md  v0.6.2.md  v0.6.3.md  v0.6.4.md
examples/: README.md  binary-only.mjs  handedness-check.mjs  recast-config.mjs
examples/r3f/: README.md
package/: README.md  wasm_splatwalk.d.ts
package-pro/: COMMERCIAL-LICENSE.md  README.md
package-pro/src/: index.ts  license.ts  streaming.ts
pkg/wasm_splatwalk/: wasm_splatwalk.d.ts  wasm_splatwalk.js  wasm_splatwalk_bg.wasm  wasm_splatwalk_bg.wasm.d.ts
public/: _redirects  manifest.json  sw.js
public/playground/: PLAYGROUND_README.md  STORAGE_ADAPTER_QUICK_REF.ts  STORAGE_ADAPTER_README.md  babylon-fast-nav.ts  index.html  storage-adapter.html  storage-adapter.ts
scripts/: build-integration-kits.mjs  build-package-pro.sh  build-package.sh  build-wasm.sh  build.sh  release-tag.sh
src/: index.ts  styles.css
wasm-splatwalk/: Cargo.toml
wasm-splatwalk/src/: glb.rs  lib.rs  mesh.rs  output_space.rs  slice.rs  sog.rs  splat.rs
(+72 files in other folders)
