[workspace]
members = ["wasm-splatwalk"]
resolver = "2"

# Single source of truth for the crate version. Keep this in lockstep with
# `package.json` (npm) so the WASM `semver` field and the published npm package
# never drift. Per SemVer 2.0.0 (https://semver.org/spec/v2.0.0.html): bump MINOR
# for additive changes, PATCH for fixes, MAJOR for breaking changes.
[workspace.package]
version = "0.4.0"
edition = "2021"

[profile.release]
lto = true
opt-level = 's'
