[package]
name = "wasm-splatwalk"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "=0.2.106"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3", features = ["console"] }
ply-rs = "0.1"
nalgebra = "0.33"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
getrandom = { version = "0.2", features = ["js"] }
poisson_reconstruction = "0.4"
serde-wasm-bindgen = "0.6"
spz_rs = "0.1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"
