[package]
name = "wasm-splatwalk"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "=0.2.106"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.83", features = ["console"] }
ply-rs = "0.1.3"
nalgebra = "0.33.3"
rand = "0.8.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.128"
serde_bytes = "0.11.15"
image-webp = "0.2.4"
getrandom = { version = "0.2.17", features = ["js"] }
poisson_reconstruction = "0.4.0"
serde-wasm-bindgen = "0.6.5"
spz_rs = "0.1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.56"
